<resources>
    <string name="app_name">Kabataku</string>
    <string name="nama_text">Masukan Nama:</string>
    <string name="button_masuk">Masuk</string>
    <string name="button_materi">Materi</string>
    <string name="button_quiz">Quiz</string>
    <string name="button_mudah">Mudah</string>
    <string name="button_sedang">Sedang</string>
    <string name="button_sulit">Sulit</string>
    <string name="button_about">About</string>
    <string name="label">Nama</string>
    <string name="halo">Halo</string>
    <string name="text_about">About Aplikasi</string>
    <string name="text_desc_about">Aplikasi dibuat untuk membantu pembelajaran anak SD. Dengan beberapa materi dan penjelasan yang mudah dipahami.</string>
    <string name="text_question">Sebuah segitiga memiliki ukuran sisi alas 10 cm dan tinggi 7 cm. Jika ukuran sisi-sisi miringnya adalah 8 cm dan 9 cm, hitunglah berapa luas dan keliling segitiga tersebut!</string>
    <string name="text_answer1">35 cm² dan 27 cm</string>
    <string name="text_answer2">27 cm² dan 35 cm</string>
    <string name="text_answer3">30 cm² dan 25 cm</string>
    <string name="submit_button">Submit</string>
    <string name="text_progress">0/10</string>
    <string name="luas_segitiga_sama_sisi_yaitu_l_a_t_atau_l_a_4_3_keterangan_l_luas_a_alas_t_tinggi_keliling_segitiga_sama_sisi_yaitu_k_sisi_a_sisi_b_sisi_c_atau_k_3_sisi_keterangan_k_keliling_cara_mencari_tinggi_segitiga_sama_sisi_yaitu_t_2_l_a_atau_t_sisi_3_keterangan_t_tinggi_l_luas_a_alas_rumus_mencari_alas_segitiga_sama_sisi_yaitu_a_2_l_t_keterangan_a_alas_l_luas_t_tinggi">Luas segitiga sama sisi yaitu : L = ½ × a × t atau L = a² ÷ 4 × √3 Keterangan : L = luas a = alas t = tinggi Keliling segitiga sama sisi yaitu : K = sisi a + sisi b + sisi c atau K = 3 × sisi Keterangan : K = keliling Cara mencari tinggi segitiga sama sisi yaitu : t = (2 × L) ÷ a atau t = sisi × ½ √3 Keterangan : t = tinggi L = luas a = alas Rumus mencari alas segitiga sama sisi yaitu : a = (2 × L) ÷ t Keterangan : a = alas L = luas t = tinggi</string>
    <string name="hai_teman_teman_di_video_kali_ini_kita_akan_belajar_untuk_menghitung_luas_persegi_panjang_untuk_rumus_luas_persegi_panjang_adalah_l_p_x_l_luas_panjang_x_lebar">Hai teman-teman di video kali ini kita akan belajar untuk menghitung luas persegi panjang. untuk rumus Luas persegi panjang adalah L = p x l Luas = panjang x lebar</string>
    <string name="hai_teman_teman_di_video_kali_ini_kita_akan_belajar_untuk_menghitung_luas_persegi_panjang_untuk_rumus_luas_persegi_panjang_adalah_l_p_x_l_luas_panjang_x_lebar_bentuk_rumus_keliling_persegi_panjang_adalah_k_p_l_p_l_atau_k_2x_p_l">Hai teman-teman di video kali ini kita akan belajar untuk menghitung luas persegi panjang. untuk rumus Luas persegi panjang adalah L = p x l Luas = panjang x lebar Bentuk rumus keliling persegi panjang adalah: K = p+l+p+l atau K= 2x(p+l)</string>
</resources>