<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img">

    <Button
        android:id="@+id/materi_button"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="280dp"
        android:text="@string/button_materi"
        android:textColor="#000000"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/button_quiz"
        android:textColor="#000000"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materi_button" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="275dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_about"
        android:textColor="#000000"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_button" />
</androidx.constraintlayout.widget.ConstraintLayout>